[package]
name = "timeperf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ipadic"]  # ipadic is the default feature
ipadic = ["lindera/ipadic"]  # Japanese dictionary
unidic = ["lindera/unidic"]  # Japanese dictionary

[dependencies]
lindera = { path = "../lindera" }
clap = { version = "3.1", features = ["derive"] }  # MIT or Apache-2.0
